[tool.poetry]
name = "ppm-cmd"
packages = [{ include = "ppm" }]
version = "0.1.3"
description = "python project manager"
authors = ["manishshettym <manishs@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
rich = "^13.6.0"
questionary = "^2.0.1"
poetry = "^1.6.1"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
ppm = "ppm.ppm:app"